@@ -1,6 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.beerslawlab;
 
+import java.awt.Color;
+
 /**
  * Constants that are used globally.
  *
@@ -10,4 +12,6 @@ public class BLLConstants {
 
     public static final int CONTROL_FONT_SIZE = 18;
     public static final int TICK_LABEL_FONT_SIZE = 14;
+
+    public static final Color WATER_COLOR = new Color( 0xE0FFFF );
 }
