@@ -14,6 +14,7 @@ import edu.colorado.phet.beerslawlab.view.BLLFaucetNode;
 import edu.colorado.phet.beerslawlab.view.BeakerNode;
 import edu.colorado.phet.beerslawlab.view.ConcentrationModelDebugger;
 import edu.colorado.phet.beerslawlab.view.DropperNode;
+import edu.colorado.phet.beerslawlab.view.OutputFluidNode;
 import edu.colorado.phet.beerslawlab.view.ShakerNode;
 import edu.colorado.phet.common.phetcommon.application.PhetApplication;
 import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
@@ -30,8 +31,10 @@ public class ConcentrationCanvas extends BLLCanvas {
 
         // Nodes
         PNode beakerNode = new BeakerNode( model.beaker );
-        PNode inputFaucetNode = new BLLFaucetNode( Objects.INPUT_FAUCET_SLIDER, ConcentrationModel.MAX_INPUT_FLOW_RATE, model.inputFaucet, 1000 );
-        PNode outputFaucetNode = new BLLFaucetNode( Objects.OUTPUT_FAUCET_SLIDER, ConcentrationModel.MAX_OUTPUT_FLOW_RATE, model.outputFaucet, 20 );
+        BLLFaucetNode inputFaucetNode = new BLLFaucetNode( Objects.INPUT_FAUCET_SLIDER, model.inputFaucet );
+        BLLFaucetNode outputFaucetNode = new BLLFaucetNode( Objects.OUTPUT_FAUCET_SLIDER, model.outputFaucet );
+        PNode inputFluidNode = new OutputFluidNode( inputFaucetNode, 350, model.solution, model.inputFaucet );
+        PNode outputFluidNode = new OutputFluidNode( outputFaucetNode, 100, model.solution, model.outputFaucet );
         PNode soluteControlNode = new SoluteControlNode( model.getSolutes(), model.solute, model.soluteForm );
         PNode shakerNode = new ShakerNode( model.shaker, model.soluteForm );
         PNode dropperNode = new DropperNode( model.dropper, model.soluteForm );
@@ -44,7 +47,9 @@ public class ConcentrationCanvas extends BLLCanvas {
 
         // rendering order
         {
+            addChild( inputFluidNode );
             addChild( inputFaucetNode );
+            addChild( outputFluidNode );
             addChild( outputFaucetNode );
             addChild( beakerNode );
             addChild( shakerNode );
@@ -63,9 +68,6 @@ public class ConcentrationCanvas extends BLLCanvas {
             // NOTE: Nodes that have corresponding model elements handle their own offsets.
             final double xMargin = 20;
             final double yMargin = 20;
-            inputFaucetNode.setOffset( 50, 30 );
-            outputFaucetNode.setOffset( beakerNode.getFullBoundsReference().getMaxX(),
-                                        beakerNode.getFullBoundsReference().getMaxY() - 95 );
             // upper right
             soluteControlNode.setOffset( getStageSize().getWidth() - soluteControlNode.getFullBoundsReference().getWidth() - xMargin, yMargin );
             // left aligned below beaker
